kubernetes/demo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    backstage.io/kubernetes-id: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
        backstage.io/kubernetes-id: demo
    spec:
      containers:
      - name: ubuntu
        image: ubuntu
        command: 
        - /bin/sh
        args:
        - -c
        - "tail -f /dev/null"
